--- a/.env
+++ b/.env
@@ -24,6 +24,10 @@ APP_SECRET=deaed8c15c5ab224613e71c04c725cc9
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/myshop?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/myshop?serverVersion=mariadb-10.4.22&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
